# camoufox-connector

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/csharp/: CamoufoxExample.csproj  Example.cs
examples/curl/: examples.sh
examples/go/: example.go  go.mod
examples/java/: Example.java  pom.xml
examples/kotlin/: Example.kt  build.gradle.kts
examples/nodejs/: example.js  package.json
examples/php/: example.php
examples/python/: example.py  requirements.txt
examples/ruby/: Gemfile  example.rb
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/typescript/: example.ts  package.json  tsconfig.json
src/camoufox_connector/: __init__.py  config.py  pool.py
