[package]
name = "camoufox-connector-example"
version = "1.0.0"
edition = "2021"
description = "Rust example for connecting to Camoufox Connector"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
